<resources>
    <string name="app_name">Honey</string>
    <string name="age_title">13+</string>
    <string name="avengers_movie_name">Avengers: <br/>End Game</string>
    <string name="avengers_movie_name_one_row">Avengers: End Game</string>
    <string name="categories_movie">Action, Adventure, Fantasy</string>
    <string name="storyline_title">Storyline</string>
    <string name="storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="count_reviews">125 REVIEWS</string>
    <string name="arrow_back_title">Back</string>
    <string name="cast_title">Cast</string>
    <string name="robert_downey_jr.">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark  Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>

    <string name="star_description">star</string>
    <string name="background_top_avengers">background_top_avengers</string>
    <string name="target_list">target list</string>
    <string name="movies_list_title">Movies list</string>
    <string name="avengers_movie_image">avengers movie image</string>
</resources>