<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsMovie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintGuide_end="192dp"
            android:orientation="vertical"/>

        <ImageView
            android:id="@+id/avengers_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/background_orig"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/background_top_avengers" />

        <TextView
            android:id="@+id/age_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_title"
            android:textColor="@color/white_avengers"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/avengers_img"
            app:layout_constraintStart_toStartOf="@+id/guideline_margin_start"
            app:layout_constraintTop_toTopOf="@+id/avengers_img"
            app:layout_constraintVertical_bias="0.943" />

        <TextView
            android:id="@+id/movie_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/avengers_movie_name"
            android:textColor="@color/white_avengers"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline_margin_start"
            app:layout_constraintTop_toBottomOf="@+id/age_title_text_view" />

        <TextView
            android:id="@+id/categories_movie_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/categories_movie"
            android:textColor="@color/red_avengers"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/guideline_margin_start"
            app:layout_constraintTop_toBottomOf="@id/movie_name_textView" />

        <!--stars block-->

        <ImageView
            android:id="@+id/star_icon_imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_description"
            android:src="@drawable/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_imageView2"
            app:layout_constraintEnd_toStartOf="@+id/star_icon_imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_margin_start"
            app:layout_constraintTop_toTopOf="@+id/star_icon_imageView2" />

        <ImageView
            android:id="@+id/star_icon_imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_description"
            android:src="@drawable/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_imageView3"
            app:layout_constraintEnd_toStartOf="@+id/star_icon_imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star_icon_imageView1"
            app:layout_constraintTop_toTopOf="@+id/star_icon_imageView3" />

        <ImageView
            android:id="@+id/star_icon_imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_description"
            android:src="@drawable/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_imageView4"
            app:layout_constraintEnd_toStartOf="@+id/star_icon_imageView4"
            app:layout_constraintStart_toEndOf="@+id/star_icon_imageView2"
            app:layout_constraintTop_toTopOf="@+id/star_icon_imageView4" />

        <ImageView
            android:id="@+id/star_icon_imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_description"
            android:src="@drawable/star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon_imageView5"
            app:layout_constraintEnd_toStartOf="@+id/star_icon_imageView5"
            app:layout_constraintStart_toEndOf="@+id/star_icon_imageView3"
            app:layout_constraintTop_toTopOf="@+id/star_icon_imageView5" />

        <ImageView
            android:id="@+id/star_icon_imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_description"
            android:src="@drawable/star_icon_empty"
            app:layout_constraintBottom_toBottomOf="@+id/count_reviews_textView"
            app:layout_constraintEnd_toStartOf="@+id/count_reviews_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/star_icon_imageView4"
            app:layout_constraintTop_toTopOf="@+id/count_reviews_textView" />

        <TextView
            android:id="@+id/count_reviews_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/count_reviews"
            android:textColor="@color/gray_avengers"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/star_icon_imageView5"
            app:layout_constraintTop_toBottomOf="@+id/categories_movie_textView" />
        <!--   stars block end-->
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="30dp"
            app:constraint_referenced_ids="star_icon_imageView1, star_icon_imageView2,count_reviews_textView"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="425dp" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/storyline_title"
            android:textColor="@color/white_avengers"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/guideline_margin_start"
            app:layout_constraintTop_toBottomOf="@+id/barrier_stars" />

        <TextView
            android:id="@+id/storyline_text_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="4dp"
            android:text="@string/storyline_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/guideline_margin_start"
            app:layout_constraintEnd_toEndOf="@+id/guideline_margin_end"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cast_title"
            android:textColor="@color/white_avengers"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/guideline_margin_start"
            app:layout_constraintTop_toBottomOf="@+id/storyline_text_textView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="30dp"
            app:constraint_referenced_ids="cast" />

        <ImageView
            android:id="@+id/actor_imageView1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/robert_downey_jr."

            android:src="@drawable/robert_downey_jr"
            app:layout_constraintEnd_toStartOf="@+id/actor_imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_margin_start"
            app:layout_constraintTop_toTopOf="@+id/actor_imageView2" />

        <TextView
            android:id="@+id/actor_textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/robert_downey_jr."
            android:textColor="@color/white_avengers"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/actor_imageView1"
            app:layout_constraintStart_toStartOf="@+id/actor_imageView1"
            app:layout_constraintTop_toBottomOf="@+id/actor_imageView1"/>

        <ImageView
            android:id="@+id/actor_imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/chris_evans"
            android:src="@drawable/chris_evans"
            app:layout_constraintEnd_toStartOf="@+id/actor_imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor_imageView1"
            app:layout_constraintTop_toTopOf="@+id/actor_imageView3"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/actor_textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/chris_evans"
            android:textColor="@color/white_avengers"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/actor_imageView2"
            app:layout_constraintStart_toStartOf="@+id/actor_imageView2"
            app:layout_constraintTop_toBottomOf="@+id/actor_imageView2" />

        <ImageView
            android:id="@+id/actor_imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/mark_ruffalo"
            app:layout_constraintEnd_toStartOf="@+id/actor_imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor_imageView2"
            app:layout_constraintTop_toTopOf="@+id/actor_imageView4"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/mark_ruffalo" />

        <TextView
            android:id="@+id/actor_textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/white_avengers"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/actor_imageView3"
            app:layout_constraintStart_toStartOf="@+id/actor_imageView3"
            app:layout_constraintTop_toBottomOf="@+id/actor_imageView3" />

        <ImageView
            android:id="@+id/actor_imageView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/chris_evans"
            android:src="@drawable/chris_hemsworth"
            app:layout_constraintEnd_toEndOf="@+id/guideline_margin_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor_imageView3"
            app:layout_constraintTop_toBottomOf="@id/barrier_cast"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/actor_textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/white_avengers"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/actor_imageView4"
            app:layout_constraintStart_toStartOf="@+id/actor_imageView4"
            app:layout_constraintTop_toBottomOf="@+id/actor_imageView4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_margin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/space_2x"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_margin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="@dimen/space_2x"
            android:orientation="vertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>